<resources>
    <string name="app_name">Forall</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="notification">Notification</string>
    <string name="promo_cord">Promo Cord</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="my_details">My details</string>
    <string name="order">Order</string>
</resources>