<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_shopping_bag_24"
            android:title="@string/order" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_assignment_ind_24"
            android:title="@string/my_details" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_add_location_24"
            android:title="@string/delivery_address" />
        <item
            android:id="@+id/paymentmethod"
            android:icon="@drawable/ic_baseline_credit_card_24"
            android:title="@string/payment_methods" />
        <item
            android:id="@+id/promo_cord2"
            android:icon="@drawable/ic_baseline_confirmation_number_24"
            android:title="@string/promo_cord" />
        <item
            android:id="@+id/notification2"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/notification" />
        <item
            android:id="@+id/help2"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/help" />

        <item
            android:id="@+id/about2"
            android:icon="@drawable/ic_baseline_error_24"
            android:title="@string/about" />
    </group>


     <item android:title="Logout">

 <menu>
     <item
         android:id="@+id/about2as"
         android:icon="@drawable/ic_baseline_login_24"
         android:title="Logout" />
 </menu>
     </item>
</menu>